<resources>
    <string name="app_name">Filmopoisk</string>
    <!--    <string name="navigation_drawer_open">Open navigation drawer</string>-->
    <!--    <string name="navigation_drawer_close">Close navigation drawer</string>-->
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="action_settings">Settings</string>
    <string name="menu_categories">Collections</string>
    <string name="menu_upcoming">Upcoming</string>
    <string name="menu_top_rated">Top Rated</string>
    <string name="menu_now_playing">Now Playing</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="write_a_search_query">Search</string>

    <!-- settings resources-->
    <string name="support">Support</string>
    <string name="feedback_summary">Report technical issues or suggest new features</string>
    <string name="feedback_title">Send feedback</string>
    <string name="feedback_key">feedback</string>
    <string name="Download_images_title">Download images</string>
    <string name="download_images_key">download_images_key</string>
    <string name="Cache_images_title">Cache images</string>
    <string name="cache_images_key">cache_images_key</string>
    <string name="Theme_settings">Theme settings</string>
    <string name="theme_style_key">theme_style</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="about">about</string>
    <string name="About_app">About app</string>
    <string name="app_version">app version 0.99</string>
    <string name="languages">Languages</string>
    <string name="languages_category">Languages</string>
    <string name="notification">Notification</string>
    <string name="notification_key">Notification_key</string>
    <string name="notification_title">Enable notification</string>
    <string name="movie_poster_desc">movie poster</string>
    <string name="fragment_launch_label">fragment_launch</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_watchlist">Watchlist</string>
    <string name="details">Details</string>
    <string name="release_date">Release date</string>
    <string name="genres">Genres</string>
    <string name="tagline">Tagline</string>
    <string name="countries_of_origin">Countries of origin</string>
    <string name="official_site">Official site</string>
    <string name="original_language">Original language</string>
    <string name="production_companies">Production companies</string>
    <string name="overview">Overview</string>
    <string name="button_to_add_to_some_list">Button to add to some list</string>
    <string name="add_to_fab">Add to</string>
    <string name="change_items_view">Change items view</string>
    <string name="Invisible_Settings">InvisibleSettings</string>
    <string name="recyclerViewType_key">recyclerViewType_key</string>
    <string name="recyclerViewType_summary">recyclerViewType_summary</string>
    <string name="recyclerViewType_title">recyclerViewType_title</string>
    <string name="movie_genres">Movie Genres</string>
    <string name="release_year">Release Year</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="average_vote">Average Vote</string>
    <string name="back">Back</string>
    <string name="apply_filter">Apply filter</string>
    <string name="add_filters">Add filters</string>
    <string name="adult_year">18+</string>
    <string name="load_image_desc">Load Image</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="vote_star">Vote star</string>
    <string name="home_button">home button</string>

</resources>