<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="Network settings" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/download_images_key"
        android:title="@string/Download_images_title" />
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="@string/download_images_key"
        android:key="@string/cache_images_key"
        android:title="@string/Cache_images_title" />

    <PreferenceCategory android:title="@string/Theme_settings" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/theme_style_key"
        android:summaryOff="@string/light"
        android:summaryOn="@string/dark"
        android:switchTextOff="@string/light"
        android:switchTextOn="@string/dark" />

    <PreferenceCategory android:title="@string/Notification" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/Notification_key"
        android:title="@string/Notification_title" />
    <!--     добавить язык и регион  https://medium.com/google-developer-experts/exploring-android-jetpack-preferences-8bcb0b7bdd14-->
    <!--    <PreferenceCategory android:title="@string/languages_category" />-->
    <!--    <DropDownPreference-->
    <!--        android:key="@string/languages"-->
    <!--        android:title="@string/languages"-->
    <!--        android:entries="@array/entries"-->
    <!--        app:useSimpleSummaryProvider="true"-->
    <!--        android:entryValues="@array/entry_values"/>-->
    <!--    <DropDownPreference-->
    <!--        android:key="region"-->
    <!--        android:title="Region"-->
    <!--        android:entries="@array/entries"-->
    <!--        app:useSimpleSummaryProvider="true"-->
    <!--        android:entryValues="@array/entry_values"/>-->

    <PreferenceCategory android:title="@string/support" />
    <Preference
        android:key="@string/feedback_key"
        android:summary="@string/feedback_summary"
        android:title="@string/feedback_title" />
    <Preference
        android:key="@string/about"
        android:summary="@string/app_version"
        android:title="@string/About_app" />

    <PreferenceCategory android:title="@string/Invisible_Settings" />
    <Preference
        app:isPreferenceVisible="false"
        android:defaultValue="false"
        android:key="@string/recyclerViewType_key"
        android:summary="@string/recyclerViewType_summary"
        android:title="@string/recyclerViewType_title" />

</PreferenceScreen>