<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navMainPager"
            android:icon="@drawable/baseline_category_24"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/navFavorites"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/navWatchlist"
            android:icon="@drawable/baseline_watch_later_24"
            android:title="@string/menu_watchlist" />
        <item
            android:id="@+id/navSearch"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/navSettings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_settings" />
    </group>
</menu>