<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/dialog_search_filter_genre_tit"
        style="@style/TextViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/movie_genres"
        app:layout_constraintEnd_toStartOf="@+id/dialog_search_filter_18_over"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/dialog_search_filter_left_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialog_search_filter_genres"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintBottom_toTopOf="@+id/dialog_search_filter_guideline"
        app:layout_constraintEnd_toEndOf="@+id/dialog_search_filter_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/dialog_search_filter_left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/dialog_search_filter_genre_tit" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dialog_search_filter_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/dialog_search_filter_dates_title"
        style="@style/TextViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/release_year"
        app:layout_constraintEnd_toEndOf="@+id/dialog_search_filter_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/dialog_search_filter_left_guideline"
        app:layout_constraintTop_toTopOf="@+id/dialog_search_filter_guideline" />

    <EditText
        android:id="@+id/dialog_search_filter_dates_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:hint="@string/from"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/dialog_search_filter_dates_to"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/dialog_search_filter_left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/dialog_search_filter_dates_title"
        android:autofillHints="1" />

    <EditText
        android:id="@+id/dialog_search_filter_dates_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/to"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/dialog_search_filter_right_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dialog_search_filter_dates_from"
        app:layout_constraintTop_toBottomOf="@+id/dialog_search_filter_dates_title"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/dialog_search_filter_vote_average_title"
        style="@style/TextViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/average_vote"
        app:layout_constraintEnd_toEndOf="@+id/dialog_search_filter_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/dialog_search_filter_left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/dialog_search_filter_dates_from" />

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/dialog_search_filter_vote_average"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:value="5.0"
        android:valueFrom="0.0"
        android:valueTo="10.0"
        app:layout_constraintEnd_toEndOf="@+id/dialog_search_filter_right_guideline"
        app:layout_constraintStart_toStartOf="@+id/dialog_search_filter_left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/dialog_search_filter_vote_average_title"
        app:values="@array/initial_range_slider_values" />

    <Button
        android:id="@+id/dialog_search_filter_cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_Xsmall"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialog_search_filter_apply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/dialog_search_filter_left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/dialog_search_filter_vote_average" />

    <Button
        android:id="@+id/dialog_search_filter_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_Xsmall"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/apply_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dialog_search_filter_right_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dialog_search_filter_cancel"
        app:layout_constraintTop_toBottomOf="@+id/dialog_search_filter_vote_average" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dialog_search_filter_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/dialog_search_filter_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dialog_search_filter_18_over"
        style="@style/TextViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/adult_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialog_search_filter_right_guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dialog_search_filter_genre_tit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/dialog_search_filter_genre_tit"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

