<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.DetailFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/detail_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/margin_medium"
        android:paddingHorizontal="@dimen/margin_small"
        android:paddingBottom="@dimen/margin_small">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/margin_small"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movie_releaseDate_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/release_date"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_releaseDate_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    tools:text="12.15.1521" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/margin_small"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movie_genres_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/genres"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_genres_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    tools:text="horror, action, drama, sport " />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/margin_small"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movie_tagline_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/tagline"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_tagline_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="3"
                    android:gravity="start"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    tools:text="blablalbal, bakalfladls, dfwqd 1231 dafdsfsld" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/margin_small"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movie_countries_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/countries_of_origin"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_countries_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    tools:text="Russia, USA, Germany, China" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/margin_small"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movie_homepage_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/official_site"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_homepage_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start"
                    android:text="@string/official_site"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/margin_small"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movie_originalLanguage_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/original_language"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_originalLanguage_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    tools:text="English" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/margin_small"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/movie_productionCompanies_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/production_companies"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_productionCompanies_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="start"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="Russia, USA, Germany, China" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/margin_small"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_overview_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <TextView
                    android:id="@+id/movie_overview_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    tools:text="movie_overview_text" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>